--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -16,11 +16,13 @@
         </div>
         <div id="img-div"> 
           <img src="https://images.saymedia-content.com/.image/t_share/MTgwMDE1OTM1MjA4NjI5Mzcw/the-ancient-greek-philosopher-plato-his-life-and-works.jpg" id="image">
-          <p id="img-caption">An art of Plato</p>
+          <div id="img-caption">
+            <p>An art depicting how Plato might have looked like</p>
+          </div>
         </div>
         <section id="tribute-info">
           <div class="heading">
-            <h2>Here's some interesting information about Plato's life</h2>
+            <h2>Here's some interesting information about Plato's life:</h2>
           </div>
           <div class="list">
             <ul>
@@ -42,7 +44,7 @@
               <li>Plato died in Athens, and was probably buried on the Academy grounds</li>
             </ul>
           </div>
-          <div>
+          <div class="quote">
             <p>“Human behavior flows from three main sources: desire, emotion and knowledge.”</p>
             <p>-- Plato</p>
           </div>
